# dash-cpuminer-1.3-arm-x86

./: Makefile.am  cpuminer-config.h  miner.h  xcoin.c
x2/: scrypt.c  sha2.c
x6/groestl/aesni/: hash-groestl.c  hash-groestl.h
